css/style.css
/* ... */
.home-hero__social {
  width: 5rem;
}
.home-hero__social-icon-link {
  width: 100%;
  display: block;
  padding: 1.2rem;
  border-bottom: 2px solid #eee;
  transition: background 0.3s;
}
.home-hero__social-icon-link:hover {
  background: rgba(255, 255, 255, .);
}
.home-hero__social-icon-link--bd-none {
  border-bottom: 0;
}
.home-hero__social-icon {
  width: 100%;
}
.home-hero__content {
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: 90rem;
  width: 92%;
}
@media only screen and (max-width: 37.5em) {
  .home-hero__content {
    padding: 19rem 0 13rem 0;
    margin: auto;
    position: static;
    transform: translate(0, 0);
  }
}
.home-hero__info {
  margin: 3rem auto 0 auto;
  max-width: 80rem;
}
.home-hero__cta {
  margin-top: 5rem;
  text-align: center;
}

.about {
  background: rgb(250, 250, 250);
}
.about__content {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 5.5rem;
}
@media only screen and (max-width: 56.25em) {
  .about__content {
    grid-template-columns: 1fr;
    grid-gap: 8rem;
  }
}
.about__content-title {
  font-weight: 700;
  font-size: 2.8rem;
  margin-bottom: 3rem;
}
@media only screen and (max-width: 37.5em) {
  .about__content-title {
    font-size: 2.4rem;
  }
}
.about__content-details-para {
  font-size: 1.8rem;
  color: grey;
  max-width: 60rem;
  text-align: center;
  line-height: 1.7;
  margin-bottom: 1rem;
}
.about__content-details-para--hl {
  font-weight: 700;
  margin: 0 3px;
}
.about__content-details-para:last-child {
  margin-bottom: 4rem;
}

.projects__row {
  grid-gap: 5rem;
  margin-bottom: 10rem;
  align-items: center;
}
@media only screen and (max-width: 56.25em) {
  .projects__row {
    grid-template-columns: 1fr;
    grid-gap: 2rem;
  }
}
@media only screen and (max-width: 56.25em) {
  .projects__row {
    text-align: center;
    list-style:none
  }
}

.projects__row:last-child {
  margin-bottom: 5rem;
}
.projects__row-img-cont {
  overflow: hidden;
}
.projects__row-img {
  width: 100%;
  padding-top: 1.5rem;
  display: block;
  object-fit: fill;
}
.projects__row-content {
  display: flex;
  justify-content: center;
  flex-direction:column;
  align-items: center;
}
@media only screen and (max-width: 56.25em) {
  .projects__row-content {
    align-items: center;
  }
}
.projects__row-content-title {
  
  font-weight: 700;
  font-size: 2.8rem;
  margin-bottom: .75rem;
}
.projects__row-content-subtitle {
  
  font-weight: 550;
  color: rgb(70, 70, 70);
  font-size: 1.4rem;
  margin-bottom: .75rem;
}
@media only screen and (max-width: 37.5em) {
  .projects__row-content-title {
    font-size: 2.4rem;
  }
}
.projects__row-content-desc {
  font-size: 1.8rem;
  color: grey;
  text-align: center;
  max-width: 60rem;
  line-height: 1.7;
  margin-bottom: 1.5rem;
}
@media only screen and (max-width: 37.5em) {
  .projects__row-content-desc {
    font-size: 1.7rem;
  }
}
@media only screen and (max-width: 37.5em){
    projects__row-content-desc-even{
        order:2;
    }
}
@media only screen and (max-width: 37.5em) {
    projects__row-content-img-even{
        order: 1;
    }
}


.contact {
  background: linear-gradient(to right, rgba(32, 200, 32, 0.8), rgba(32, 200, 32, 0.8)), url(../../assets/svg/common-bg.svg);
  background-size: cover;
  background-position: center;
}
.contact__form-container {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  background: white;
  padding: 4rem;
  margin-top: 6rem;
  max-width: 80rem;
  text-align: right;
  width: 95%;
  border-radius: 5px;
  margin: 5rem auto 0 auto;
}
@media only screen and (max-width: 37.5em) {
  .contact__form-container {
    padding: 3rem;
  }
}
.contact__form-field {
  margin-bottom: 4rem;
}
@media only screen and (max-width: 37.5em) {
  .contact__form-field {
    margin-bottom: 3rem;
  }
}
.contact__form-label {
  color: #666;
  font-size: 1.4rem;
  letter-spacing: 1px;
  font-weight: 700;
  margin-bottom: 1rem;
  display: block;
  text-align: left;
}
.contact__form-input {
  color: #333;
  padding: 2rem;
  width: 100%;
  border: 1px solid rgb(235, 235, 235);
  font-size: 1.6rem;
  letter-spacing: 0px;
  background: #f0f0f0;
  border-radius: 5px;
  font-weight: 600;
  /* Code for Modern Browsers */
  /* Code for WebKit, Blink, Edge */
  /* Code for Internet Explorer 10-11 */
  /* Code for Microsoft Edge */
  /* Code for Mozilla Firefox 4 to 18 */
  /* Code for Mozilla Firefox 19+ */
}
.contact__form-input::placeholder {
  color: #999;
  font-weight: 600;
  font-size: 1.6rem;
}
.contact__form-input::-webkit-input-placeholder {
  color: #999;
  font-weight: 600;
  font-size: 1.6rem;
}
.contact__form-input:-ms-input-placeholder {
  color: #999;
  font-weight: 600;
  font-size: 1.6rem;
}
.contact__form-input::-ms-input-placeholder {
  color: #999;
  font-weight: 600;
  font-size: 1.6rem;
}
.contact__form-input:-moz-placeholder {
  opacity: 1;
  color: #999;
  font-weight: 600;
  font-size: 1.6rem;
}
.contact__form-input::-moz-placeholder {
  opacity: 1;
  color: #999;
  font-weight: 600;
  font-size: 1.6rem;
}
.contact__btn {
  width: 30%;
  margin-top: 4rem;
  padding: 2rem 4rem;
  font-size: 1.6rem;
}
@media only screen and (max-width: 37.5em) {
  .contact__btn {
    width: 100%;
  }
}

.readmore__btn{
  width: 40%;
  margin-bottom: 4rem;
  padding: 2rem 4rem;
  font-size: 1.6rem;
}

.project-cs-hero {
  color: #fff;
  background: linear-gradient(to right, rgba(16, 200, 16, 0.75), rgba(16, 200, 16, 0.75)), url(../assets/svg/common-bg.svg);
  background-size: cover;
  background-position: center;
  height: 25rem;
  position: relative;
}
@media only screen and (max-width: 37.5em) {
  .project-cs-hero {
    height: unset;
    min-height: unset;
  }
}
.project-cs-hero__content {
  position:relative;
  padding-top:8rem;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: 90rem;
  width: 92%;
}
/* ... */

